# pytest-meilisearch

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi_publish.yml  testing.yml
pytest_meilisearch/: __init__.py  _internal.py  _meilisearch_server.py  fixtures.py  plugin.py
tests/: conftest.py  test_fixtures.py  test_version.py
