[tool.poetry]
name = "pytest-meilisearch"
version = "0.3.2"
description = "Pytest helpers for testing projects using Meilisearch"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/pytest-meilisearch"
homepage = "https://github.com/sanders41/pytest-meilisearch"
documentation = "https://github.com/sanders41/pytest-meilisearch"
keywords = ["meilisearch", "python", "pytest"]
classifiers=[
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
meilisearch-python-sdk = ">=2.0.1"
pytest = ">=7.4.3"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.6.1"
pre-commit = ">=3.5.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.3"
tomli = {version = ">=2.0.1", python = "<3.11"}
pytest-asyncio = ">=0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
"meilisearch" = "pytest_meilisearch.plugin"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pytest_meilisearch --cov-report term-missing --meilisearch-master-key masterKey --no-cov-on-fail --start-meilisearch"
asyncio_mode = "auto"
meilisearch_clear_indexes = "async"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
line-length = 100
target-version = "py38"
fix = true
